# Tel

./: .gitignore  README.md  pyproject.toml
apps/: admin.py  models.py  serializers.py  urls.py  views.py
root/: settings.py  urls.py
